# excel-sales-data-pipeline

./: .gitignore  README.md  pyproject.toml
data/input/daily_reports/: 02.03.26.xlsx  03.03.26.xlsx  04.03.26.xlsx  05.03.26.xlsx  06.03.26.xlsx  09.03.26.xlsx  10.03.26.xlsx  11.03.26.xlsx  12.03.26.xlsx  13.03.26.xlsx  16.03.26.xlsx  17.03.26.xlsx  18.03.26.xlsx  19.03.26.xlsx  20.03.26.xlsx  23.03.26.xlsx  24.03.26.xlsx  25.03.26.xlsx  26.03.26.xlsx  27.03.26.xlsx  30.03.26.xlsx  31.03.26.xlsx
data/output/: raw_extract.csv
data/output/csv/: dim_date.csv  dim_movement_type.csv  dim_product.csv  dim_sale_type.csv  dim_spot.csv  fact_inventory_movement.csv  fact_productcost.csv  fact_sales_gross.csv  fact_sales_quantity.csv
docs/: architecture.md  data_flow.md  data_model.md  mapping_rules.md  powerbi_model.dbml  table_grains.md
json/: date_dimension.json  movement_types.json  product_name_corrections.json  product_source_rules.json  sale_types.json  spots.json
src/create_database/: exceptions.py  pipeline.py  run.py
src/create_database/config/: paths.py  settings.py
src/create_database/dimensions/: dim_date.py  dim_movement_type.py  dim_product.py  dim_sale_type.py  dim_spot.py  product_identity.py
src/create_database/extract/: excel_reader.py  file_scanner.py  metadata.py  sheet_selector.py
src/create_database/facts/: fact_inventory_movement.py  fact_productcost.py  fact_sales_gross.py  fact_sales_quantity.py  productcost_daily_lookup.py
src/create_database/raw/: raw_loader.py  raw_models.py  raw_validators.py
src/create_database/utils/: io.py  (+1 more)
(+7 files in other folders)
